--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Open.NAT" version="2.1.0.0" targetFramework="net472" />
+  <package id="Google.Apis" version="1.57.0" targetFramework="net472" />
+  <package id="Google.Apis.Auth" version="1.57.0" targetFramework="net472" />
+  <package id="Google.Apis.Core" version="1.57.0" targetFramework="net472" />
+  <package id="Google.Apis.Drive.v3" version="1.57.0.2859" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net472" />
 </packages>
